# shell.struct

./: .gitignore  README.md  shell.struct.cabal
src/: ShellStack.hs
